--- a/07-作業分析及用例.md
+++ b/07-作業分析及用例.md
@@ -1,1 +1,26 @@
-# 09 作業分析及用例
+# 【人機互動設計】07 作業分析及用例
+
+> **閱讀資料**
+> - UI is Communication, CH2 [name=Everett McKay]
+> 
+> - User and Task Analysis for Interface Design, Ch3 [name= JoAnn T. Hackos, Janice C. Redish]
+> 
+> [color=#6b26ff]
+
+---
+
+###### tags: `NCCU` `HCI` `人機互動設計課程`
+> 2020 年政治大學數位內容【人機互動設計】課程筆記
+> 
+> 週四 09:00-12:00｜授課老師：陳宜秀
+
+:::warning
+
+可在下方訂閱我的筆記，會將筆記直送到你的信箱內。
+ 
+2020 年 2 月 25 日～6 月 30 日，每週派送。:point_down:
+:::
+
+
+<iframe src="https://clockwork.substack.com/embed" width="480" height="200" style="border:none; background:none; max-width: 100%; margin: auto; display: block;" frameborder="0" scrolling="no">
+</iframe>
