--- a/01-人機互動概論: 溝通.md
+++ b/01-人機互動概論: 溝通.md
@@ -63,16 +63,16 @@
 [^1]: Kraut, R. (2006). Why bowlers smile. APS Observer, 19(6).
 
 
-### 與溝通有關的理論
+## 與溝通有關的理論
 
-#### **Aristotle's model of communication**
+### **Aristotle's model of communication**
 - 線性溝通模型：Speaker → Speech → Audience → Effect
 - 有效溝通的三個要件
     1. Ethos 傳播者的可信度
     2. Pathos 情感的影響
     3. Logos 內容的邏輯
 
-#### **Encode-Decode Model**
+### **Encode-Decode Model**
 
 1. Shannon-Weaver Model
     - [Claude Elwood Shannon](https://spectrum.ieee.org/tech-history/cyberspace/claude-shannon-tinkerer-prankster-and-father-of-information-theory) 提出 
@@ -87,7 +87,7 @@
     - 儘管 Wilbur Schramm 的補充，但 Encode-Decode Model 是個不完整的模型，因為除了「共同經驗範疇」會影響溝通的有效性外，溝通過程的人、訊息、情境都會因為 **context（情境／脈絡）** 而不同。
 
 
-#### **Intentionalist Model 意向理論模式**
+### **Intentionalist Model 意向理論模式**
 - 要溝通的不是資訊，而是「意義 meaning」或「意向 intention」
 - 因此人之間的問答，不會只看字面意義，而是「詮釋」出背後的意義（了解對方的意圖）才回覆。
 
@@ -128,7 +128,7 @@ University Press.
     
     突出某項目與情境詮釋間的關係。
     
-#### Perspective-taking Model
+### Perspective-taking Model
 - 以對方的觀點、因素決定溝通行為。
 - perspective 指的是
     - inferred knowledge about the **person**
@@ -146,13 +146,13 @@ University Press.
 
 👉**Scripts（腳本）**，一種社會心理學概念，一組有順序的行為與事件，在特定場景中進行規範的社會互動：遞名片、看診、到餐廳點餐。我們在社會化的過程中不斷習得各種場合的腳本。
 
-### 溝通是複雜的心理歷程
+## 溝通是複雜的心理歷程
 1. 根據對對方的了解 → 決定如何溝通（溝通的方式）
 2. 根據對情境的了解與期待 → 知道下一步將發生什麼
 3. 在互動中累積共同認知 → 能知道 scripts 進行到哪個階段
 4. 對共同認知的修正 → 若出錯或不確定，就確認並不斷修正
 
-### 人機互動的溝通方式
+## 人機互動的溝通方式
 
 - 將溝通模式套用在人機互動：設計產品 → 做出產品 → 介面 → 接觸介面 → 使用產品。
     - 設計者會在心中模擬使用情境，根據對使用者的了解設計產品。
