--- a/02-人機互動的心理學基礎.md
+++ b/02-人機互動的心理學基礎.md
@@ -1,1 +1,254 @@
-# 02 人機互動的心理學基礎
+# 【人機互動設計】02 人機互動的心理學基礎
+
+> 政治大學數位內容與科技研究所 2020 年「人機互動設計」課程筆記。
+> 
+> Human-Computer Interaction Design｜週四 09:00-12:00｜授課老師：陳宜秀
+
+###### tags: `NCCU` `人機互動設計課程`
+
+## Cybernetics 控制論
+
+人的一個感覺／認知／動作都是由各種不同的系統協作完成，這些系統都很複雜，無法單獨分離說明個別系統對應的人類感覺／認知／動作。
+
+👉 [控制論的詳細介紹](https://www.hk01.com/哲學/232923/維納-歷史上的控制論)
+
+以下是各種與人類感知、互動相關的心理學理論
+
+## 視覺
+
+從 John Berger[《觀看的方式》](https://www.books.com.tw/products/0010477040)提到，觀看是
+
+- an act of choice（一種選擇行為）
+- the relation between things and ourselves（代表著看者與被看者間的關係）
+- continually active, countably moving（視覺是持續變動的）
+
+### 視覺的產生與運作
+
+- 主要由組成視網膜的「錐細胞 Cone」與「桿細胞 Rod」運作
+- 錐細胞：主要分布在視網膜中央，包含感光物質，分別由藍、綠、紅三種錐細胞的神經衝動，在 Ganglion Cell 神經節層形成不同的激起／抑制組合，而形成色彩。（註：藍綠紅錐細胞分別對色光三原色的 RGB 有不同程度的光敏程度，但沒有直接的顏色代表關係）
+- 桿細胞：主要分布在視網膜外圍，只有一種感光細胞，無法分辨顏色，但在黑暗中有高敏感度。
+
+更多桿細胞與錐細胞的介紹，見[此文章](https://www.cis.rit.edu/people/faculty/montag/vandplite/pages/chap_9/ch9p1.html)
+
+### Lateral Inhibition 側向抑制
+
+視覺像探照燈，人類正在注視的、位於視覺中央的物件，會有最清晰的影像，而物件的周遭則是模糊不清的。
+
+- 原理：一組視覺細胞有整合神經節，當注視著物件時，光線會刺激最中間的視覺細胞，讓該位置的視覺細胞興奮。
+- 對視覺的影響：是否有**共同特徵**，會影響到視覺判斷差異的速度。
+
+| 比較         | 有共同特徵 | 沒有共同特徵                 |
+| ------------ | ---------- | -------------------------|
+| 視覺搜尋方式 | 序列搜尋   | 平行搜尋                      |
+| 注意力       | 介入       | 不介入                      |
+| 速度         | 慢         | 快                        |
+| 圖像特徵     | 形態類似   | 走向、運動方向或速度、顏色、大小 |
+
+- 視覺與注意力控制
+    - bottom-up：看什麼 → 看到什麼
+    - top-down：想看什麼 → 看到什麼
+    - 不對稱搜尋（search asymmetry）人的視覺系統偏好正統樣式，容易在標準正統樣式中尋找變異樣式，但反過來進行就很困難。（例如在一堆缺角的圓圈中尋找完整的圓圈 vs 在一堆完整的圓圈中尋找缺角的圓圈，前者速度慢、後者速度快）
+
+## 視覺與注意力
+
+- 人的視覺與注意力關係密切
+- 人的注意力有限，用來關注最重要的部分。若集中注意力，就會加速訊息處理，提高效率。
+- 兩種搶注意力的因素
+    - top-down：內在因素、動機、目標、喜好。
+    - bottom-up：基本特徵、醒目性，若夠強烈，就能突破 top-down 的過濾。
+
+### Saliency 醒目性
+
+如何讓使用者一眼就看到，這與訊息提醒、步驟指示相關。物件的基本特徵、大小、顏色、明亮、清晰度、動作、習慣／預期心理，能操控醒目性。其中的習慣／預期心理跟社會互動的 script 類似，當使用者以學習到運作模式，就有規範可循。
+
+👉 [Script 與 Mental Model 差別](https://sk.sagepub.com/reference/leadership/n317.xml)
+
+### Feature Integration Theory 特徵整合理論
+
+```
+Treisman, A. M., & Gelade, G. (1980). A feature-integration theory of attention. Cognitive psychology, 12(1), 97-136.
+```
+
+- 當注意力投射到視野的某區域，視覺系統會整合接收到的基本特徵（顏色、方向、大小、動作等），產生物體知覺（人就會想：這是什麼東西？）
+- 人在持續不斷地解釋世界
+
+#### Gestalt Psychology 完形心理學
+
+- 人的知覺不是散亂的個別刺激，而是「整體的型態」
+- 組織定律
+    1. 優型律 paragnanz（偏好簡潔、有意義的型態組合）
+    2. 連續律 continuity
+    3. 相連律 connectedness
+    4. 共同律 common fate
+    5. 封閉律 closure
+    6. 鄰近律 proximity
+    7. 相似律 similarity
+- 當定律間互相衝突時，哪個定律最具有決定性？不知，看人如何解讀。
+
+## 記憶與注意力
+
+### Wickens 資訊處理模式
+
+![](https://i.imgur.com/soM5zAq.png)
+
+組成要素
+- 注意力（資源）attention resources
+- 決策（判斷、選擇、決定）decision and response selection
+- 動作 response execution
+- 知覺 perception
+- 短期記憶 working memory
+- 長期記憶 long-term memory
+- 感覺記憶 short-term sensory store
+
+### Multiple Storage Model: Atkinson-Shiffrin
+
+多重記憶模型：採訊息處理模式說明人的記憶歷程，認為人與電腦類似，可將訊息儲存、保管並取用。此模式可分成感覺記憶(sensory memory)、短期記憶(short-term memory)與長期記憶(long-term memory)三種。
+
+![](https://i.imgur.com/tPYtlxq.png)
+
+- 感覺記憶亦稱感覺儲存(sensory storage)或感覺登錄(sensory register)；感覺記憶持有的資訊屬於較粗略和未經處理的形式，時間甚短，可供進一步處理之用。主要的感覺記憶有視覺記憶、聽覺記憶、觸覺記憶等。
+
+    - iconic 視覺、echoic 聽覺、haptic 觸覺
+    - 儲存時間約 1-3 秒
+    - 不需要注意力，但若有注意力，可能進入短期記憶
+
+- 短期記憶又稱短期儲存(short-term storage)，所包含的僅是少量的、零碎的訊息，除非複誦(rehearsal)，不然很快就消失。
+
+    - 容量有限，類似電腦的 RAM
+    - 儲存時間約 15-30 秒
+    - 進入短期記憶的三種結果
+        1. 因 rehearsed 留在短期記憶內
+        2. 因 rehearsed 進入長期記憶內
+        3. 被新事物取代而消失
+    - [Miller Magix Number: 7+-2](http://psychclassics.yorku.ca/Miller/)，將記憶量化計算，發現年輕人的記憶力約是 7+-2 個單位。[PDF slide](http://www.knosof.co.uk/cbook/misart.pdf)
+
+- 長期記憶的潛能大於短期記憶，除了能夠記憶多年前的舊訊息外，亦能記憶最近獲致的新訊息。因此比較持久，且不易喪失。唯亦可能將訊息轉移給短期記憶或在中間喪失。此模式具有結構性，亦即有穩定的順序。
+
+    - 儲存時間：一輩子
+    - 容量：無限
+    - 內隱記憶 implicit memory：技藝類、運動類項目
+    - 明示記憶 explicit memory：陳述性記憶（事實、概念）、程序性記憶（事件、經驗、流程）
+
+👉 [wikipedia](https://en.wikipedia.org/wiki/Atkinson–Shiffrin_memory_model)
+
+#### Chunking：使用長期記憶幫助短期記憶
+
+賦予意義，協助快速記下看似不相關的項目，類似聯想法。例如圍棋選手的背譜，因為每手棋間都有關係，所以容易記下棋譜，背譜能力強；但當棋譜是亂下的，那圍棋選手的背譜能力就跟一般人相同。
+
+#### Distributed Cognition 分佈式認知
+
+- 認知分佈在所有和互動相關的環境中：訊息媒介、介面、人。
+- 也就是資訊的記憶不一定要記在自己的腦中，能用其他方式記下，一種「延伸腦」的概念。
+- 例如：筆記本、鍵盤上的標記、app 的功能、cockpit、醫院看板。
+- 減輕人的**心理負荷量（Mental Workload）**
+
+#### Mental Workload 心理負荷量
+
+- 定義：指的是正在進行的作業（task）或一組作業對操作者在心裡操作能力上的要求
+- 取決於：
+
+    - 難度
+    - 數量
+    - 作業間的干擾程度
+    - 速度要求
+    - modality（類型：文字／聲音／影像）
+    - 過往經驗（是否受過訓練）
+
+- 如何測量心理負荷？與涉及的事物「複雜程度」、「干擾程度」相關（用事物或事件的數量計算，不見得正確，從尋找共同特徵可以得知，當尋找的目標與干擾物間沒有共同特徵，注意力不需要特別介入也能輕鬆在眾多干擾物中找到目標，即使干擾物數量增加也無妨）
+
+    - 反應時間：負荷量大，反應時間長
+    - 正確性：負荷量大，錯誤增加
+    - 效率：負荷量大，效率降低
+    - 中斷次數：負荷量大，容易中斷
+
+- 如何減少心理負荷
+
+    - 減少同時作業的數量
+    - 凸顯需要處理的任務
+    - 具體化流程（善用延伸腦）
+    - 簡化決定的性質（提供最簡選項、清楚的指示訊息）
+    - 訓練
+
+#### Kahneman: System1 vs System2
+
+|      | System1                  | System2      |
+| ---- | ------------------------ | ------------ |
+| 功能 | 維持既有對世界的看法     | 客觀分析資訊 |
+| 特色 | fast                     | slow         |
+|      | automatic                | effortful    |
+|      | frequent                 | infrequent   |
+|      | emotional                | logical      |
+|      | stereotypic              | calculating  |
+|      | subconscious             | conscious    |
+| 結果 | 判斷偏差、偏見、錯誤認知 |              |
+
+- System1 與 System2 輪流啟動，互相競爭
+- System1 的誤差影響：huristic bias
+    - 賭徒謬論
+    - 錨定效果
+    - 刻板印象
+
+## 人因工程三定律
+
+### Fitts' Law
+
+Paul Fitts 對 pointing 的研究。
+
+$M = a + b*ID$
+
+$ID = log_2(\frac{2D}{W})$
+
+- 當目標（W）變小、距離（D）變長，觸及目標會變得困難（ID, index of difficulty）
+- 越困難等同觸及目標的時間會拉長
+- 越困難，使用者操控的滑鼠所需的準確度越高
+
+> Fitts, P. M. (1954). The information capacity of the human motor system in controlling the amplitude of movement. Journal of experimental psychology, 47(6), 381.
+
+### Steering Law
+
+使用者移動鼠標，通過長型隧道，不可以碰到兩邊（類似電流急急棒的玩法）
+
+$T = a + b\int_C\frac{ds}{W(s)}$
+
+T = Time
+
+d = distance of segments(length of tunnel)
+
+W = Width of the segments
+
+- 隧道越寬，花費的時間越短（容易）
+- 隧道越長，花費的時間越長（困難）
+- 隧道又窄又長時，使用者需要更多注意力控制滑鼠
+- 應用在 menu 選單
+    - 選單中加入短暫的延遲，方便使用者轉移到子選單
+    - 盡可能縮短選單長度
+    - 盡可能不使用子選單設計
+
+> - [Accot-Zhai Steering Law: Implications for UI Design](https://www.nngroup.com/articles/steering-law/)
+> - Johnny Accot and Shumin Zhai. 1997. “Beyond Fitts' law: models for trajectory-based HCI tasks,” Proceedings of CHI '97.
+> - Sergey Kulikov, I. Scott MacKenzie, Wolfgang Stuerzlinger. 2005. “Measuring the Effective Parameters of Steering Motions,” CHI '05 Extended Abstracts on Human Factors in Computing Systems.
+
+### Hick's Law
+
+反應時間與要處理的資訊量成正比。
+
+$RT = a + b log2(n)$
+
+RT = reaction time
+
+a = constant, default process time
+
+b = coefficient, average decision time
+
+n = number of possible choices
+
+- 當選擇呈現的方式很類似，反應時間會隨著選擇的數量而增加，不利順暢的操作
+- KISS 原則：Keep it short and simple, Keep it simple and stupid
+- 應用
+    - Categorizing Choice – Enabling users to find items from higher categories, as if they were looking under sections in a library.（例如依照字母順序安排選項）
+    - Obscuring Complexity – Breaking up long or complex processes into screens with fewer options.（讓使用者認識所有可能的項目）
+
+> - 研究原文：[On the rate of gain of information](https://www2.psychology.uiowa.edu/faculty/mordkoff/InfoProc/pdfs/Hick%201952.pdf)
+> - [Hick’s Law: Making the choice easier for users](https://www.interaction-design.org/literature/article/hick-s-law-making-the-choice-easier-for-users)
+> - [UX的定律第二集-Hick法則](https://medium.com/as-a-product-designer/ux的定律第二集-hick法則-f9f42a0704e7)
+> 
