--- a/02-人機互動的心理學基礎.md
+++ b/02-人機互動的心理學基礎.md
@@ -65,12 +65,10 @@
 
 ### Feature Integration Theory 特徵整合理論
 
-```
-Treisman, A. M., & Gelade, G. (1980). A feature-integration theory of attention. Cognitive psychology, 12(1), 97-136.
-```
-
 - 當注意力投射到視野的某區域，視覺系統會整合接收到的基本特徵（顏色、方向、大小、動作等），產生物體知覺（人就會想：這是什麼東西？）
 - 人在持續不斷地解釋世界
+
+> Treisman, A. M., & Gelade, G. (1980). A feature-integration theory of attention. Cognitive psychology, 12(1), 97-136.
 
 #### Gestalt Psychology 完形心理學
 
