--- a/03-介面原則、心理模式、互動歷程.md
+++ b/03-介面原則、心理模式、互動歷程.md
@@ -1,1 +1,176 @@
-# 03 介面原則／心理模式／互動歷程
+# 【人機互動設計】03 介面原則／心理模式／互動歷程
+
+###### tags: `NCCU` `人機互動設計課程`
+
+> 人接觸新事物時，會有什麼反應？
+> 
+- 產生情感式反應 ex:好可愛～～
+- 形式匹配
+- 形成心理模型
+- 決定關係
+- 試錯
+
+經過上述一系列行為後，達到最終目的（知道怎麼互動：能做什麼、該做什麼、能完成什麼目標）
+
+但人為何能靠著這一系列行為，就能知道該如何互動呢？主要依靠兩個機制
+1. Top-Down：人在還未探索物品前，因為先前在別處學習到的經驗：**系統印象**會引導我們，知道如何使用物品。
+2. Bottom-up：物品本身的設計提供使用者線索，這些線索引導使用者與物品互動。
+
+## Image System 系統印象
+
+- 定義：跟介面接觸前，使用者已知的相關訊息。在與物品的溝通行為開始前，就已經作用了（使用者的期待）。
+- 什麼是最普遍的系統印象來源？廣告、網路評價
+- 功能（以第一代 iPhone 廣告為例）
+    - 定義產品
+    - 塑造期待
+    - 告訴使用方式
+    - 產品的差異化
+
+### 三個互動的心理層次
+
+1. 情感層次
+2. 行為層次 behavioral
+3. 思考層次 reflective（指的是有意識地思考）
+
+#### 1. 情感層次
+
+- 情感層次指的是本能情緒
+- 來源
+    - 透過視覺、觸覺、聽覺、嗅覺、味覺等人類感觀
+    - 後天學習的經驗，例如：怕鬼
+    - 心理學的情緒理論？？？
+        - [情緒，超普通心理學](https://spiketren.gitbooks.io/psy101/ch11/emotion.html)
+        - [「吊橋效應」? 淺談關於情緒反應的心理學知識](https://medium.com/los-psychology/吊橋效應-淺談關於情緒反應的心理學知識-e9162e63c8a3)
+- 情感層次的反應無法改變，但隨之產生的人類腎上腺素會幫助應變。
+- 產品設計的 CMF（color, material, fabric）這三個要素容易激起人類情感層次的印象。
+
+#### 2. 行為層次
+
+- 來源:（過度）學習 over learning，變成不需要注意力也能完成的 automatic process。
+- 行為層次運作期間，人仍對行為的回饋抱有期待，期待行為的結果符合預期。因此，卡卡的行為會讓人感到挫折與困擾。
+- 連結到 Hick's Law：當選擇的數量增加，將不利順暢的操作（需要注意力介入，且反應時間較長）。**好的行為體驗來自於快速的決定／行動的交錯**
+
+#### 3. 思考層次
+
+- 來源：記憶、知識、思考
+
+> Don't make me think, revisited : a common sense approach to Web usability / Steve Krug ; editor: Elizabeth Bayle.
+> 
+
+## 外界知識與設計
+
+- 預設用途 affordance
+- 指意 signifier
+- 控制方式與行動間的對應關係
+- 物理性局限（限制人類的行為選擇）
+
+### 1. Affordance
+
+為何看到門就知道要用推的？看到按鈕知道要用按的？
+
+> Gibson, J. J. (1977). The theory of affordances. Hilldale, USA, 1(2).
+> 
+
+- 是相對概念，不同需求的動物／人類，為求生存，而出現對物品的不同 affordance
+- 得知 affordance 是種下意識、不經思考的歷程
+- 是與自然環境互動學習的結果
+- 在實體與虛擬物件都成立
+
+### 2. Signifier 指意
+
+- 用來指出意義的東西
+- 是有意設計的（CAT），也可能是自然形成的（草皮被踩出光禿禿的一條道路）
+- CTA, Call To Action
+    - 一種想辦法觸發行動的指意
+    - 以「顯著性＋動作」組合
+
+### 3. Metaphor 譬喻
+
+用 A 的某項特性了解／說明 B
+
+- 類似的 GUI 設計：menu, mail, scroll-bar, file icon
+- 可以脫離現實而存在
+
+## 腦中知識與設計
+
+- 概念模型/mental model
+- 文化
+- 意義
+- 邏輯
+- 當下的狀況與過去經驗等 context
+
+### Mental Model 心理模型
+
+- 等同概念模型（conceptual model）
+- 描述事物如何組織的描述，例如：人體器官的模型
+- 描述互動如何發生的描述，如：神經細胞間的傳導
+- 解釋、預測現象的方法（那不就是理論嗎）
+- 幫助使用者形成假設，一但了解某個譬喻的意義，人就能生成相對的心理模型，使人有期待、預測
+- 心理模型不一定要精確，但要讓使用者感覺熟悉
+
+### 知覺與環境裡的線索
+
+- 對應 mapping
+- 侷限 constraint
+- 強制性機能 forcing functions
+- 預期性記憶 prospective memory
+- 前饋與回饋 feedforward, feedback
+
+#### 對應 Mapping
+
+例如電燈開關的位置排列，是否對應著電燈安裝的位置。
+
+#### 侷限 constraint
+
+- 必要的侷限
+    - 防止不正常使用，例如誤觸
+    - 縮減互動的可能性，讓使用者更快理解操作方式
+- 不必要的侷限
+- 強制性機能：硬性的侷限
+    - 互鎖、鎖入、鎖出
+    - 目的在防止意外，會降低互動／作業速度，開啟人的反思層次。
+- 侷限是減少心理負荷量大的工具，因為能選擇的行為變少
+
+#### Don Norman 心理歷程週期模型（行動七階段模型）
+
+- 完成目標的兩個障礙：執行障礙、評估障礙
+- 模型
+    - 要完成的目標
+    - 前饋（執行階段）
+        - 計畫，有哪些可以採取的行動？
+        - 制定，選定計畫後，我要做什麼？
+        - 執行，我該怎麼做？
+    - 外界
+    - 回饋（評估階段）
+        - 感知，發生什麼事？
+        - 解釋，這是什麼意思？
+        - 比較，這樣行嗎？
+
+| 階段 | 設計目的                                     | 採用                               | 避免                       |
+| ---- | -------------------------------------------- | ---------------------------------- | -------------------------- |
+| 計畫 | 讓可採取的行動變得醒目、容易發現             | 顯著性、affordance、指意、心理模型 | trial and error            |
+| 制定 | 限制可採取的行動數量（Hick's Law）           | 對應、侷限、強制性機能             | 行動選項與預期結果差距太多 |
+| 執行 | 減少記憶負擔、操作簡單                       | Fitt's Law、Steering Law           |                            |
+| 感知 | 給予清楚的感知回饋                           |                                    |                            |
+| 解釋 | 在回饋內提供說明                             |                                    |                            |
+| 比較 | 清楚告知行動結果（成功或失敗），引導下個行動 |                                    | 打斷行動                   |
+
+- 活動／任務／行動
+
+# 閱讀清單
+
+### 指定閱讀
+
+- 《設計的心理學》CH4
+- 《情感＠設計》CH3
+- 《我們的情感是怎樣被設計的》CH5
+
+### 延伸閱讀
+
+- Jan Chipchase, Simon Steinhardt《觀察的力量：從烏干達到中國，如何為明天的客戶創造非凡的產品》
+- Irving Goffman《日常生活中的自我表演》
+- [The Tyranny of Evaluation](http://web.media.mit.edu/~lieber/Misc/Tyranny-Evaluation.html), [Henry Lieberman](http://web.media.mit.edu/~lieber/)
+
+> We need more judgement in evaluation of user interfaces, not just more calculation.
+> 
+
